test_programs/compile_failure/noirc_frontend_tests_immutable_references_without_ownership_feature/src/main.nr

        fn main() {
            let mut array = [1, 2, 3];
            borrow(&array);
        }

        fn borrow(_array: &[Field; 3]) {}
    